+ Sanitize data in MyProjects Information Page so that it doesn't render raw html w/ tags + Implement submitting feedback change-requests for coaches + Implement approving request change-requests for coaches

--- a/app/views/appeditrequests/show.html.haml
+++ b/app/views/appeditrequests/show.html.haml
@@ -36,6 +36,6 @@
           = link_to @app.pivotal_tracker_url, @app.pivotal_tracker_url
   .well#feedback
     %h4 Feedback
-    = text_area_tag :feedback, "", size: "24x6"
+    = text_area_tag :feedback, @edit_request.feedback, size: "24x6"
   = submit_tag 'Approve Change Request', :class => 'btn btn-primary'
-  = submit_tag 'Send Feedback', :class => 'btn btn-primary', name: 'feedback'
+  = submit_tag 'Send Feedback', :class => 'btn btn-primary', name: 'feedback_given'
